box-sizing & display

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: black;
 }
-#blockel {
+#contentbox {
     height: 100px;
     width: 100px;
     padding: 10px;
@@ -15,7 +15,7 @@ body {
     background-color: rgb(100, 78, 49);
     box-sizing: content-box; /* box-sizing is content-box by default*/
 }
-#inlineel {
+#borderbox {
     height: 100px;
     width: 100px;
     padding: 10px;
