--- a/style.css
+++ b/style.css
@@ -6,22 +6,20 @@
 }
 body {
     background-color: black;
+    margin: 0px;
+}
+a  {
+    display: block;
 }
 #contentbox {
-    height: 100px;
-    width: 100px;
-    padding: 10px;
-    border: 15px rgb(81, 102, 39) solid;
-    background-color: rgb(100, 78, 49);
-    box-sizing: content-box; /* box-sizing is content-box by default*/
-    overflow: auto; /*overflow is used when content overflows, we enable scroll on X or Y axis and manage it.*/
+    background-color: rgb(54, 84, 110);
+    width: 49vw;
+    height: 69vh;
+    display: inline-block;
 }
-#borderbox {
-    height: 100px;
-    width: 100px;
-    padding: 10px;
-    border: 15px rgb(81, 102, 39) solid;
-    background-color: rgb(100, 78, 49);
-    margin-top: 2rem;
-    box-sizing: border-box; /*it limits the content size as defiined in height and width*/
+#borderbox  {
+    background-color: rgb(47, 107, 87);
+    width: 50vw;
+    height: 45px;
+    display: inline-block;
 }
